tests/NormalTests/paczka1/fuzzy1/90210068.err
Error in line 10: XPgGcSqgdnJ S337 66,6
Error in line 14: XPgGcSqgdnJ A662 43,6
Error in line 40: Y94HGYtZ5PQ A662 61,19
